edit code chu ky

--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -3,9 +3,9 @@
   <div class="btn_footer">
     <div class="label">
 <!--      !this.datas.coordination_complete && !view-->
-      <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>
-      <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>
-<!--      <button class="next action-button" (click)="showSignature()">Chữ ký</button>-->
+<!--      <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>-->
+<!--      <button *ngIf="!this.is_show_coordination && !view" type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>-->
+      <button class="next action-button" (click)="showSignature()">Chữ ký</button>
     </div>
     <div class="label">
 <!--      <button type="button" name="next" class="next action-button" *ngIf="view" (click)="downloadFilePDF()">Tải file</button>-->
