--- a/src/app/main/contract-signature/components/text-signature-image/text-signature-image.component.html
+++ b/src/app/main/contract-signature/components/text-signature-image/text-signature-image.component.html
@@ -1,1 +1,3 @@
-<p id="text-sign">{{textSign}}</p>
+<div [style.width.px]="width" [style.height.px]="height" style="background: rgba(0, 0, 0, 0.01);font-family:Arial,sans-serif;">
+  <p id="text-sign">{{textSign}}</p>
+</div>
