--- a/src/app/main/contract-type/contract-type.component.html
+++ b/src/app/main/contract-type/contract-type.component.html
@@ -31,8 +31,8 @@
               <td><a (click)="isQLLHD_05?detailContractType(list.id):null" style="color: #0160AE; cursor: pointer;">{{list.name}}</a></td>
               <td>{{list.code}}</td>
               <td style="text-align: center">
-                <img *ngIf="isQLLHD_02" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editContractType(list.id)" style="cursor: pointer;"/>&nbsp;&nbsp;
-                <img *ngIf="isQLLHD_03" src="../../../assets/img/icon_delete.svg" width="16px" (click)="deleteContractType(list.id)" style="cursor: pointer;"/>
+                <!-- <img *ngIf="isQLLHD_02" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editContractType(list.id)" style="cursor: pointer;"/>&nbsp;&nbsp;
+                <img *ngIf="isQLLHD_03" src="../../../assets/img/icon_delete.svg" width="16px" (click)="deleteContractType(list.id)" style="cursor: pointer;"/> -->
               </td>
           </tr>
       </ng-template>
