--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -32,7 +32,7 @@
               <td>{{list.code}}</td>
               <td style="text-align: center">
                 <img *ngIf="isQLVT_02" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editRole(list.id)" style="cursor: pointer;"/>&nbsp;&nbsp;
-                <img *ngIf="isQLVT_03" src="../../../assets/img/icon_delete.svg" width="16px" (click)="deleteRole(list.id)" style="cursor: pointer;"/>
+                <!-- <img *ngIf="isQLVT_03" src="../../../assets/img/icon_delete.svg" width="16px" (click)="deleteRole(list.id)" style="cursor: pointer;"/> -->
               </td>
           </tr>
       </ng-template>
