--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -269,11 +269,12 @@ h3{
 }
 .item_contract_name {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 15px;
   color: #106DB6;
 }
 
-.item_contract_infor, .item_date{
+.item_contract_infor{
+  font-size: 11px;
   color: #666666;
 }
 
