--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -15,14 +15,22 @@
 
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
               <div class="title_notification">DANH SÁCH THÔNG BÁO</div>
-              <div class="drop_notification" *ngFor="let item of contracts; let i = index">
+              <div class="drop_notification" *ngFor="let item of contracts; let i = index"  (click)="openLinkNotification(item.notice_url)">
                 <div class="row">
                   <div class="col-md-12 item_contract_name">{{item.notice_name}}</div>
                 </div>
                 <div class="row">
-                  <div class="col-md-12 item_contract_infor">Đơn vị: {{item.notice_content}}</div>
+                  <div class="col-md-12 item_contract_infor">
+                    <img src="../../../assets/img/user_icon.svg" width="12px"/>
+                    <span> {{item.notice_content}}</span>
+                  </div>
                 </div>
-                <div class="row">
+                <div class="row item_contract_infor">
+
+                  <div class="col-md-6 calendar_create">
+                    <img src="../../../assets/img/calendar_icon.svg" width="15px"/>
+                    <span class="item_date"> {{item.notice_date | date: 'dd/MM/yyyy HH:mm'}}</span>
+                  </div>
                   
                   <div class="col-md-6 item_contract_infor">{{'contract.status' | translate}}:
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_coordinator'">Điều phối</span>
@@ -30,12 +38,8 @@
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_review'">Xem xét</span>
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_sign'">Ký</span>
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_publish'">Ban hành</span>
-                    <span class="status_blue" *ngIf="item.message_code=='sign_flow_publish'">Hoàn thành</span>
+                    <span class="status_blue" *ngIf="item.message_code=='sign_flow_finish'">Hoàn thành</span>
                     <span class="status_blue" *ngIf="item.message_code=='sign_flow_cancel'">Hủy</span>
-                  </div>
-                    
-                  <div class="col-md-6 calendar_create">
-                    <i class="fa fa-calendar fa_icon"></i><span class="item_date"> {{item.created_at | date: 'dd/MM/yyyy HH:mm'}}</span>
                   </div>
               
                 </div>
