--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -7,7 +7,7 @@
     <mdb-tab title="{{'contract.share-for-me' | translate}}" value='share-for-me' [ngClass]="{ 'active':type==='share-for-me'}" *ngIf="action=='receive'"></mdb-tab>
   </mdb-tabs> -->
 
-  <div class="col-md-12">
+  <div class="col-md-12" *ngIf="isQLHD_06">
     <div class="input-line search">
       <img src="../../assets/img/icon_search.svg" class="input-img" />
       <input type="text" id="search" class="input-text" placeholder="{{'contract.search.name.placeholder' | translate}}"
@@ -26,7 +26,7 @@
 
   <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p}">
     <div class="row">
-      <div class="col-md-12 item_contract_name" (click)="status != 'draft'?openDetail(item.id):null">{{item.name}}</div>
+      <div class="col-md-12 item_contract_name" (click)="status != 'draft'&& isQLHD_07?openDetail(item.id):null">{{item.name}}</div>
     </div>
     <div class="row">
       <div class="col-md-12 item_contract_infor">{{'contract.side.a' | translate}}: {{item.sideA}}</div>
@@ -52,28 +52,28 @@
 
       <div class="col-md-3 item_icon">
         <div style="display: flex; justify-content: center;">
-          <div class="div_icon" *ngIf="status == 'draft' || status == 'processing' || status == 'expire' || status == 'cancel' || status == 'fail' || status == 'overdue' || status == 'complete'">
+          <div class="div_icon" *ngIf="(status == 'draft' || status == 'processing' || status == 'expire' || status == 'fail' || status == 'overdue' || status == 'complete') && isQLHD_08">
             <img src="../../assets/img/icon_copy.svg" class="img_icon" ngbTooltip="{{'contract.copy' | translate}}" (click)="openCopy(item.id)" />
           </div>
-          <div class="div_icon" *ngIf="status == 'draft'">
+          <div class="div_icon" *ngIf="status == 'draft' && isQLHD_02">
             <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}" (click)="openEdit(item.id)" />
           </div>
           <!-- <div class="div_icon" *ngIf="status == 'draft'">
             <img src="../../assets/img/icon_delete.svg" class="img_icon" ngbTooltip="{{'contract.delete' | translate}}" (click)="deleteContract(item.id)" />
           </div> -->
-          <div class="div_icon" *ngIf="status == 'processing' || status == 'expire' || status == 'complete'">
+          <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'complete') && isQLHD_12">
             <img src="../../assets/img/icon_view_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.view' | translate}}" (click)="contractConnect(item.id)"/>
           </div>
-          <div class="div_icon" *ngIf="status == 'processing' || status == 'expire' || status == 'complete'">
+          <!-- <div class="div_icon" *ngIf="status == 'processing' || status == 'expire' || status == 'complete'">
             <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnect(item.id)"/>
-          </div>
-          <div class="div_icon" *ngIf="status == 'processing' || status == 'expire'">
+          </div> -->
+          <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire') && isQLHD_09">
             <img src="../../assets/img/icon_stop.svg" class="img_icon" ngbTooltip="{{'contract.cancel' | translate}}" (click)="cancelContract(item.id);"/>
           </div>
           <div class="div_icon" *ngIf="status == 'complete'">
             <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
           </div>
-          <div class="div_icon" *ngIf="status == 'complete'">
+          <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13">
             <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);"/>
           </div>
         </div>
