--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -1,4 +1,5 @@
-<div *ngIf="isQLND_04" class="label-header">{{'user.information.individual' | translate}}</div>
+<div *ngIf="isQLND_04">
+<div class="label-header">{{'user.information.individual' | translate}}</div>
 <div class="content">
    <div class="content-body">
      <div class="row">
@@ -121,6 +122,7 @@
     <div class="row" style="justify-content: center;padding-top: 10px;">
         <button class="cancel-button" (click)="onCancel()"  type="button">{{'btn.cancel' | translate}}</button>
     </div>
+</div>
 </div>
 <div *ngIf="!isQLND_04">
   Bạn không có quyền thực hiện tác vụ này!
