--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
@@ -32,8 +32,8 @@
           ></ngx-select>
         </div>-->
 
-        <div class="image-sign-acc-2 mt-4 d-flex justify-content-center align-items-center">
-          <img *ngIf="imgSignAccountSelect" [src]="imgSignAccountSelect" alt="">
+        <div class="image-sign-acc-2 mt-4 d-flex justify-content-center align-items-center" style="max-height: 600px;">
+          <img *ngIf="imgSignAccountSelect" [src]="imgSignAccountSelect" alt="" style="max-height: 600px;">
         </div>
       </div>
       <div *ngIf="typeImageSignatureRadio == 2">
