--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -6,7 +6,7 @@
   <ng-container>
     <app-infor-contract #infoContract *ngIf="step == 'infor-contract'" [datas]="datas" [step]="step" (stepChangeInfoContract)="getStep($event)"></app-infor-contract>
     <app-determine-signer #determineSigner *ngIf="step == 'determine-contract'" [datas]="datas" [saveDraftStep]="datas.save_draft.determine_signer" [step]="step" (stepChangeDetermineSigner)="getStep($event)"></app-determine-signer>
-    <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
+    <app-sample-contract #sampleContract *ngIf="step == 'sample-contract'" [datas]="datas" [step]="step" [saveDraftStep]="datas.save_draft.sample_contract" (stepChangeSampleContract)="getStep($event)"></app-sample-contract>
     <app-confirm-infor-contract #confirmInforContract *ngIf="step == 'confirm-contract'" [datas]="datas" [step]="step" (stepChangeConfirmInforContract)="getStep($event)"></app-confirm-infor-contract>
   </ng-container>
 </div>
