--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -21,11 +21,16 @@
       <div class="row">
         <div class="col-md-12 item_contract_name" (click)="openDetail(item.contractId)">{{item.contractName}}</div>
       </div>
-      <div class="row">
-        <div class="col-md-12 item_contract_infor">{{'contract.number' | translate}}: {{item.contractNumber}}</div>
+      <!-- <div class="row">
+        <div class="col-md-12 item_contract_infor">{{'Bên A' | translate}}: {{item.contractNumber}}</div>
       </div>
       <div class="row">
-        <div class="col-md-12 item_contract_infor">{{'contract.person-process' | translate}}: {{item.name}} - {{item.email}}</div>
+        <div class="col-md-12 item_contract_infor">{{'Bên B' | translate}}: {{item.name}} - {{item.email}}</div>
+      </div> -->
+      <div class="row">
+        <div class="col-md-12 item_contract_infor">{{'Trạng thái hợp đồng' | translate}}:
+          <span class="status_blue">{{item.contractStatus | pipe | translate}}</span>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-5">
