--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="header_card header_card_4" (click)="openLink('/main/contract-signature/receive/processed')">
+      <div class="header_card header_card_4">
         <div class="row">
           <div class="col-md-7 text_header_card">
               <div>Hoàn thành</div>
