--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -85,7 +85,7 @@
             <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="search()"></p-selectButton>
           </div>
           <div class="col-md-6">
-            <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="filter_from_date" [showIcon]="true" dateFormat="dd/mm/yy" (onSelect)="search()"></p-calendar>
+            <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="filter_from_date" [showIcon]="true" dateFormat="dd/mm/yy" (onSelect)="searchCountCreate()"></p-calendar>
           </div>
         </div>
         <div class="row">
@@ -112,15 +112,15 @@
         </div>
       </div>
       <div class="body">
-        <div *ngIf="contracts.length == 0" 
+        <div *ngIf="listNotification.length == 0" 
         style="height: 453px;display: table;top: 0;left: 0;width: 100%;text-align: center;">
         <div style="display: table-cell;vertical-align: middle;">
           <img src="../../../assets/img/empty_data.svg"/>
           <div style="color: #94A7C6">Không có dữ liệu!</div>
         </div>
       </div>
-        <div *ngIf="contracts.length > 0" style="height: 453px;"> 
-          <div *ngFor="let item of contracts; let i = index" [style.border-bottom]="i != contracts.length-1 ? '1px solid #C7D0E9' : ''" style="padding: 4px;">
+        <div *ngIf="listNotification.length > 0" style="height: 453px;"> 
+          <div *ngFor="let item of listNotification; let i = index" [style.border-bottom]="i != listNotification.length-1 ? '1px solid #C7D0E9' : ''" style="padding: 4px;">
             <div class="row">
               <div class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url)">{{item.notice_name}}</div>
             </div>
