--- a/src/app/main/contract/dialog/share-contract-dialog/share-contract-dialog.component.html
+++ b/src/app/main/contract/dialog/share-contract-dialog/share-contract-dialog.component.html
@@ -34,7 +34,7 @@
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-            <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
+            <button class="save-button" (click)="onSubmit()">{{'btn.share' | translate}}</button>
         </div>
     </form>
 
@@ -85,7 +85,7 @@
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
-            <button class="save-button" (click)="onSubmit()">{{'btn.save' | translate}}</button>
+            <button class="save-button" (click)="onSubmit()">{{'btn.share' | translate}}</button>
         </div>
     </form>
   </div>
