--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -20,10 +20,10 @@
                 <div class="row">
                   <div class="col-md-12 item_contract_name">{{item.notice_name}}</div>
                 </div>
-                <div class="row">
+                <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
                   <div class="col-md-12 item_contract_infor">
                     <img src="../../../assets/img/user_icon.svg" width="12px"/>
-                    <span> {{item.notice_content}}</span>
+                    <span> {{s}}</span>
                   </div>
                 </div>
                 <div class="row item_contract_infor">
