--- a/src/app/main/notification/notification.component.html
+++ b/src/app/main/notification/notification.component.html
@@ -6,10 +6,10 @@
           <div class="row">
             <div class="col-md-12 item_contract_name" (click)="openLinkNotification(item.notice_url, item.id)">{{item.notice_name}}</div>
           </div>
-          <div class="row">
+          <div class="row" *ngFor="let s of item.notice_content.split('<br/>')">
             <div class="col-md-12 item_contract_infor">
               <img src="../../../assets/img/user_icon.svg" width="12px"/>
-              <span> {{item.notice_content}}</span>
+              <span> {{s}}</span>
             </div>
           </div>
           <div class="row item_contract_infor">
