--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -117,5 +117,5 @@
   color="#fff"
   type="ball-spin-clockwise"
 >
-  <p style="font-size: 18px; color: white">{{loadingText}}</p>
+  <p style="font-size: 18px; color: white; text-align: center;white-space: pre-line;">{{loadingText}}</p>
 </ngx-spinner>
