--- a/src/app/action-device/action-device.component.scss
+++ b/src/app/action-device/action-device.component.scss
@@ -25,8 +25,7 @@
       .footer-btn {
         outline: none;
         border: none;
-        width: 84px;
-        height: 28px;
+        padding: 5px 15px;
         background-color: #106DB6;
         color: white;
         border-radius: 5px;
