--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,7 +9,18 @@
         <div *ngIf="getShowHideSideBar()">
           <div ngbDropdown class="d-inline-block">
             <div class="social-icons" ngbDropdownToggle (click)="loadDataNotification()">
-              <span class="notification_login"></span>
+              <!-- <span class="notification_login"></span> -->
+              <i *ngIf="numberNotification == 0"
+                  class="pi pi-bell p-mr-4 p-text-secondary"
+                  style="font-size: 20px;color:#106db6"
+              ></i>
+              <i *ngIf="numberNotification > 0"
+                class="pi pi-bell p-mr-4 p-text-secondary"
+                pBadge
+                style="font-size: 20px;color:#106db6"
+                value="{{numberNotification}}"
+              ></i>
+
               <div class="label">{{'notification' | translate }}</div>
             </div>
 
