--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -138,7 +138,7 @@ h3{
   min-height: 45px;
 }
 .drop_notification{
-  padding: 10px;
+  padding: 5px 10px;
   color:#106DB6;
   min-height: 45px;
   border-bottom: 1px solid rgb(223, 220, 220);
