--- a/src/app/main/user/detail-user/detail-user.component.html
+++ b/src/app/main/user/detail-user/detail-user.component.html
@@ -66,8 +66,8 @@
             <div class="select-contract container-img-file">
               <div class="upload-image-region d-flex flex-column container-img-file-1">
                 <img src="assets/img/img-icon.svg" alt="#" width="50px">
-                <div class="text-choose-file">{{'choose.sign.file.image' | translate}}</div>
-                <div class="text-support-extension">{{'support.format.PNG.JPG.JPGE' | translate}}</div>
+                <div class="text-choose-file">{{'Không có ảnh' | translate}}</div>
+                <!-- <div class="text-support-extension">{{'support.format.PNG.JPG.JPGE' | translate}}</div> -->
               </div>
             </div>
           </div>
