--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign/image-dialog-sign.component.html
@@ -53,8 +53,8 @@
             </div>
           </div>
         </div>
-        <div class="image-sign-acc-2 mt-4">
-          <img *ngIf="imgSignPCSelect" (click)="addFileAttach()" [src]="imgSignPCSelect" alt="" style="display: block;margin: 0 auto;width: 40vw;">
+        <div class="image-sign-acc-2 mt-4" style="max-height: 600px;">
+          <img *ngIf="imgSignPCSelect" (click)="addFileAttach()" [src]="imgSignPCSelect" alt="" style="display: block;margin: 0 auto;max-height: 600px;">
         </div>
       </div>
       <div>
