--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -41,7 +41,7 @@
 
                   <div class="col-md-6 calendar_create">
                     <img src="../../../assets/img/calendar_icon.svg" width="15px"/>
-                    <span class="item_date"> {{item.notice_date | date: 'dd/MM/yyyy HH:mm'}}</span>
+                    <span class="item_date"> {{item.created_at | date: 'dd/MM/yyyy HH:mm'}}</span>
                   </div>
                   
                   <div class="col-md-6 item_contract_infor">{{'contract.status' | translate}}:
