--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -101,13 +101,13 @@ header {
 }
 .social-icons .document {
   height: 20px;
-  width: 20px;
+  width: 18px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../../assets/img/db_processing.svg);
+  background-image: url(../../assets/img/icon_document.svg);
   //border-radius: 50%;
 }
-.social-icons .label{
+.social-icons .label{  
   color: #106DB6;
   margin-left: 10px;
 }
@@ -260,11 +260,11 @@ h3{
   background-image: url(../../assets/img/icon_vietnam.svg);
 }
 .db_document_use{
-  height: 18px;
-  width: 18px;
+  height: 22px;
+  width: 16px;   
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../../assets/img/db_processing.svg);
+  background-image: url(../../assets/img/db_document.svg);
 }
 .item_contract_name {
   font-weight: 500;
