--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -284,6 +284,7 @@ h3{
   color:#106DB6;
   padding: 10px;
   border-bottom: 1px solid rgb(223, 220, 220);
+  text-transform: uppercase;
 }
 .view_all{
   color:#106DB6;
