--- a/src/app/main/contract-type/contract-type.component.html
+++ b/src/app/main/contract-type/contract-type.component.html
@@ -54,7 +54,7 @@
   </div>
 </div>
 <div *ngIf="!isQLLHD_01 && !isQLLHD_02 && !isQLLHD_03 && !isQLLHD_04 && !isQLLHD_05">
-  Bạn không có quyền thực hiện tác vụ này!
+  {{'no.role' | translate}}
 </div>
  
   
