--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -54,6 +54,6 @@
   </div>
 </div>
 <div *ngIf="!isQLVT_01 && !isQLVT_02 && !isQLVT_03 && !isQLVT_04 && !isQLVT_05">
-  Bạn không có quyền thực hiện tác vụ này!
+  {{'no.role' | translate}}
 </div>
   
