--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -182,5 +182,5 @@
   </form>
 </div>
 <div *ngIf="!isQLND_01 && !isQLND_02">
-  Bạn không có quyền thực hiện tác vụ này!
+  {{'no.role' | translate}}
 </div>
