--- a/src/app/main/role/detail-role/detail-role.component.html
+++ b/src/app/main/role/detail-role/detail-role.component.html
@@ -7,7 +7,7 @@
             <div class="col-md-6">  
                 <div class="row">  
                     <div class="col-md-12">  
-                        <div class="label_item">Tên vai trò</div>
+                        <div class="label_item">{{'role.name' | translate}}</div>
                         <div>
                             <div [innerHTML]="name" class="input_text"></div>
                         </div>
@@ -15,7 +15,7 @@
                 </div>
                 <div class="row" style="padding-top: 10px;">  
                     <div class="col-md-12">  
-                        <div class="label_item">Mã vai trò</div>
+                        <div class="label_item">{{'role.code' | translate}}</div>
                         <div>
                             <div [innerHTML]="code" class="input_text"></div>
                         </div>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="row" style="padding-top: 10px;">  
                     <div class="col-md-12">  
-                        <div class="label_item">Ghi chú</div>
+                        <div class="label_item">{{'role.note' | translate}}</div>
                         <div>
                             <div [innerHTML]="role" class="input_text"></div>
                         </div>
@@ -32,13 +32,18 @@
             </div>
 
             <div class="col-md-6">
-                <div class="label text-color">Phân quyền</div>
+                <div class="label text-color">{{'role.permission' | translate}}</div>
                 <div>
                     <p-listbox [options]="groupedRole" [group]="true" [(ngModel)]="selectedRole" 
                         [checkbox]="true" [multiple]="true"  [listStyle]="{'max-height':'300px'}" [style]="{'width':'100%'}">
                         <ng-template let-group pTemplate="group">
                             <div class="p-d-flex p-ai-center">
-                            <span>{{group.label}}</span>
+                                <span>{{group.label | translate}}</span>
+                            </div>
+                        </ng-template>
+                        <ng-template let-group pTemplate="item">
+                            <div class="p-d-flex p-ai-center">
+                                <span>{{group.label | translate}}</span>
                             </div>
                         </ng-template>
                     </p-listbox>
@@ -47,7 +52,7 @@
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
-            <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
+            <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'btn.cancel' | translate}}</button>
         </div>
     </div>
   </div>
