--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -59,7 +59,7 @@
   </div>
 </div>
 <div *ngIf="!isQLND_01 && !isQLND_02 && !isQLND_03 && !isQLND_04">
-  Bạn không có quyền thực hiện tác vụ này!
+  {{'no.role' | translate}}
 </div>
  
   
