edit combobox unit

--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -9,10 +9,9 @@
           [(ngModel)]="organization_id" 
           optionLabel="name" 
           optionValue="id" 
-          placeholder="Chọn tổ chức" 
+          placeholder="Tất cả" 
           [filter]="true" 
           filterBy="name" 
-          [showClear]="true"  
           ></p-dropdown>
       </div>
     </div>
